# Distributed-Password-Cracking

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: client-protocol.h
client/src/: client-protocol.c  main.c
host/: CMakeLists.txt
host/src/: host-protocol.c  main.c
password_cracking/: CMakeLists.txt
password_cracking/include/: password-cracker.h
password_cracking/src/: password-cracker.c
protocol/include/: protocol.h
protocol/src/: protocol.c
